Prevent actions column from wrapping

--- a/bundles/admin/public/css/admin.less
+++ b/bundles/admin/public/css/admin.less
@@ -17,3 +17,7 @@ section.admin {
 .entry-info .preview {
 	float: right;
 }
+
+.entries .actions {
+	min-width: 200px;
+}
